# libhcs

./: .gitignore  CMakeLists.txt
all/: CMakeLists.txt
bench/: chrono.h  egcs_ee_mul.c  pcs_decrypt.c  pcs_encrypt.c  timing.h
cmake/: FindGMP.cmake
include/: libhcs++.hpp  libhcs.h
include/libhcs/: djcs.h  djcs_t.h  egcs.h  hcs_random.h  hcs_shares.h  pcs.h  pcs_t.h
include/libhcs++/: hcs_shares.hpp  pcs_t.hpp  random.hpp  shares.hpp
src/: djcs.c  djcs_t.c  egcs.c  hcs_random.c  hcs_shares.c  pcs.c  pcs_t.c  shares.c
src/com/: log.h  omp.h  parson.c  parson.h  ripemd160.c  ripemd160.h  util.c  util.h
test/: CMakeLists.txt  catch.hpp  test_pcs.cpp  test_util.cpp
